[Anuj] : added auth-service files